--- a/timeline.css
+++ b/timeline.css
@@ -169,7 +169,14 @@
 .blue-card {
     background-color: rgb(52, 52, 185);
 }
-
+.hover-modal {
+    position: absolute;
+    background-color: white;
+    padding: 10px;
+    border: 1px solid #ddd;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+}
 
 
 .plate-card {
